syntax = "proto3";

import "Nodes.proto";
import "Identities.proto";

package Permission;

message Actions {
  repeated string action = 1;
}

message ActionSet {
  oneof node_or_provider {
    Node.Node node = 1;
    Identitiy.Provider identity = 2;
  }
  string action = 3;
}
